/*
 * $Id: ChangeLog 155 2013-06-06 03:29:32Z tfonrouge $
 */

Sat Jan 28 18:53:11 UTC 2017 Teo Fonrouge (tfonrouge@gmail.com)
  M include/oordbdefs.h
  M src/TTable.prg
    + initial table error
    + PROPERTY getErrorNumber
    + METHOD getErrorString

Wed Oct 19 22:37:12 UTC 2016 Teo Fonrouge (tfonrouge@gmail.com)
  M src/TField.prg
    * don't show alert window on warning

Wed Oct 19 00:12:25 UTC 2016 Teo Fonrouge (tfonrouge@gmail.com)
  M src/TTable.prg
    * code cleanup

Tue Oct 18 23:55:09 UTC 2016 Teo Fonrouge (tfonrouge@gmail.com)
  M src/TTable.prg
    * renamed message OnAfterChange -> onAfterPostEdit

Fri Oct 14 20:12:08 UTC 2016 Teo Fonrouge (tfonrouge@gmail.com)
  M src/TField.prg
  M src/TTable.prg
    * renamed message

Thu Oct 13 21:53:33 UTC 2016 Teo Fonrouge (tfonrouge@gmail.com)
  M src/TTable.prg
    + OnAfterEdit()

Wed Oct 12 20:54:04 UTC 2016 Teo Fonrouge (tfonrouge@gmail.com)
  M src/TField.prg
    % CheckForLinkedObjFieldSetAsVariant() : call to ::table:OnCheckValueForLinkedObjField()

  M src/TTable.prg
    + OnCheckValueForLinkedObjField() : executes on ::field_*:CheckForLinkedObjFieldSetAsVariant()

Thu Sep 29 00:22:07 UTC 2016 Teo Fonrouge (tfonrouge@gmail.com)
  M src/TTable.prg
    * check if need to add index message

Tue Jul 19 03:54:39 UTC 2016 Teo Fonrouge (tfonrouge@gmail.com)
  M src/TIndex.prg
  M src/TTable.prg
    % allows replicate a skipUnique on index

Tue Jul 19 01:26:20 UTC 2016 Teo Fonrouge (tfonrouge@gmail.com)
  M src/TTable.prg
    * using static to check for messages added to class
    * on adding index message name, change code block if changing message name

Tue Jul 12 00:28:34 UTC 2016 Teo Fonrouge (tfonrouge@gmail.com)
  M src/TFieldTable.prg
    * if calculated table field returns nil, the return nil

  M src/TTable.prg
    * always create field name message

Wed Jul  6 15:24:27 UTC 2016 Teo Fonrouge (tfonrouge@gmail.com)
  M src/TTable.prg
    * always add index message (allows override message)